# SERPBridge

SERPBridge/: README.md  pyproject.toml  run_tasks.py
SERPBridge/app/: local_settings.py  main.py
SERPBridge/app/api/routes/: jobs.py
SERPBridge/app/core/: config.py  database.py  enums.py
SERPBridge/app/db/: models.py
SERPBridge/app/providers/: base.py  registry.py
SERPBridge/app/providers/serpbase/: client.py
SERPBridge/app/providers/serper/: client.py
SERPBridge/app/schemas/: job.py  serp.py
SERPBridge/app/services/: export_service.py  import_service.py  job_service.py  rank_service.py  serp_service.py
SERPBridge/app/utils/: domains.py
SERPBridge/app/worker/: runner.py
SERPBridge/docs/: project-plan.md
SERPBridge/inputs/: tasks.csv  tasks.csv.example
SERPBridge/serpbridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SERPBridge/tests/: test_domains.py  test_import_service.py  test_rank_service.py  test_serp_service.py
